took out a comma

--- a/projects/ece295.html
+++ b/projects/ece295.html
@@ -45,7 +45,7 @@
              <div class="ece295imgcontent">
                 <img class="ece295-img" src="./sim.jpg">
                 <p>We also extended template testbenches that were provided to suit our needs and evaluated the digital design using ModelSim 
-                    when we were experiencing inconsistent results. This Waveform of our DSP system, is based on specific inputs forced by a 
+                    when we were experiencing inconsistent results. This Waveform of our DSP system is based on specific inputs forced by a 
                     testbench that we modified for debugging purposes when we encountered a situation where our filters appeared to be 
                     working fine in simulation, but on hardware, failed to sufficiently attenuate the RF signals. We attempted to simulate our 
                     pipeline using ModelSim, then hand-calculated a few outputs of what we believed should have been output by the FIR filter system, 
