--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="project-text-content">
                     <h2 class="individual-project-title">Digital Demodulation System</h2>
                     <p class="projectdesc">An end-to-end hardware design project that involved the complete design, assembly, and testing of a digital system capable
-                        of demodulating upper sideband, lower sideband, and amplitude-modulated signals, fufilling one of many roles as part of the entire class collaborating to build a functional radio. 
+                        of demodulating upper sideband, lower sideband, and amplitude-modulated radio-frequency signals, fufilling one of many roles as part of the entire class collaborating to build a functional radio. 
                     </p>
                     <a class="project-link"  href="https://github.com/macaroonforu/Subsystem-B" class="github">Source Code  </a>
                     <a class="project-link" href="projects/ece295.html" class="github">More Images + Information</a>
