--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="individual-project-container">
                 <div class="project-text-content">
                     <h2 class="individual-project-title">16-Bit Processor</h2>
-                    <p class="projectdesc">A CPU designed with Verilog HDL featuring general purpose registers, a stack pointer, a link register, a program counter, and an ALU, all of which are controlled by a finite-state machine. The processor supports memory read/writes as well as subroutines. Additionally, a game that interacts with LED switches and the HEX Display on the development board was written in assembly language to be run using the instruction set provided by the processor.</p>
+                    <p class="projectdesc">A CPU designed with Verilog featuring general purpose registers, a stack pointer, a link register, a program counter, and an ALU, all of which are controlled by a finite-state machine. The processor supports memory read/writes as well as subroutines. Additionally, a game that interacts with LED switches and the HEX Display on the development board was written in assembly language to be run using the instruction set provided by the processor.</p>
 
                         <a class="project-link"  href="https://github.com/macaroonforu/16-Bit-Processor" class="github">Source Code</a>
                     
