Make React Icon dark

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         create, update, and delete education/experience entries.</p>
                     <a class="project-link"  href="https://github.com/macaroonforu/CV-Maker" class="github">Source Code</a>
                     <a class="project-link" href="https://cv-maker-fm8l.vercel.app/" class="github">Deployment</a>
-                    <p class="projectskill"><span class="iconify" data-icon="devicon:react" data-inline="false"></span>        React</p>
+                    <p class="projectskill"><span class="iconify" data-icon="skill-icons:react-dark" data-inline="false"></span>        React</p>
                 </div>
                 <div class="project-image-content">
                     <img class="project-image" src="./projects/CV.PNG">
