--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <li class="navbar-item"><a class="navbar-link" href="#home">Home</a></li>
                         <li class="navbar-item"><a class="navbar-link" href="#about">About</a></li>
                         <li class="navbar-item"><a class="navbar-link" href="#projects">Projects</a></li>
-                        <li class="navbar-item"><a class="navbar-link" href="#skills">Skils</a></li>
+                        <li class="navbar-item"><a class="navbar-link" href="#skills">Skills</a></li>
                     </ul>
                 </div>
             </nav>
