added 2 recent projects

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </nav>
         </header>
 
-        <!--Landing Page With Buttons-->
+        <!--Buttons-->
         <div class="hero">
             <h1 class="mainName">Claire Dimitriuc</h1>
             <div class="hero-btns">
@@ -57,7 +57,7 @@
             <div class="corkboard">
                 <div class="note sticky1">
                     <div class='pin'></div>
-                    <p style="font-size: 13px;">Third year computer engineering student at the University of Toronto pursuing minors in Artificial Intelligence and Robotics.</p>
+                    <p style="font-size: 13px;">Third year computer engineering student at the University of Toronto.</p>
                     <img src="./karen.webp" height="80px">
                 </div>
 
@@ -94,34 +94,34 @@
             <div class="skill-house">
                 <div class="skill-type">
                     <h2 class="skill-type-title">Web Development</h2>
-                       <p><span class="iconify" data-icon="logos:javascript" data-inline="false" height="24" width="24"></span>        JavaScript</p>
-                       <p><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
-                       <p><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
-                       <p><span class="iconify" data-icon="skill-icons:webpack-light" data-inline="false"></span>        Webpack</p>
-                       <p><span class="iconify" data-icon="vscode-icons:file-type-php" data-inline="false" height="100" width="100"></span>        PHP</p>
-                       <p><span class="iconify" data-icon="skill-icons:react-dark" data-inline="false"></span>        React</p>
-                       <p><span class="iconify" data-icon="skill-icons:expressjs-light" data-inline="false"></span>       Express</p>
+                       <p><span class="iconify" data-icon="logos:javascript" data-inline="false" height="24" width="24"></span>JavaScript</p>
+                       <p><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>HTML</p>
+                       <p><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>CSS</p>
+                       <p><span class="iconify" data-icon="skill-icons:webpack-light" data-inline="false"></span>Webpack</p>
+                       <p><span class="iconify" data-icon="vscode-icons:file-type-php" data-inline="false" height="100" width="100"></span>PHP</p>
+                       <p><span class="iconify" data-icon="skill-icons:react-dark" data-inline="false"></span>React</p>
+                       <p><span class="iconify" data-icon="skill-icons:expressjs-light" data-inline="false"></span>Express</p>
                 </div>
     
                 <div class="skill-type">
                     <h2 class="skill-type-title">Programming and Software</h2>
-                    <p><span class="iconify" data-icon="logos:python" data-inline="false"></span>        Python</p>
-                        <p><span class="iconify" data-icon="vscode-icons:file-type-c2" data-inline="false"></span>        C</p>
-                            <p><span class="iconify" data-icon="vscode-icons:file-type-cpp" data-inline="false"></span>        C++</p>
-                                <p><span class="iconify" data-icon="vscode-icons:file-type-powershell" data-inline="false"></span>        PowerShell</p>
-                                    <p><span class="iconify" data-icon="mdi:bash" data-inline="false"></span>        BASH</p>
-                    <p><span class="iconify" data-icon="skill-icons:git" data-inline="false"></span>        Git</p>
-                    <p><span class="iconify" data-icon="devicon:matlab" data-inline="false"></span>        Matlab</p> 
+                    <p><span class="iconify" data-icon="logos:python" data-inline="false"></span>Python</p>
+                        <p><span class="iconify" data-icon="vscode-icons:file-type-c2" data-inline="false"></span>C</p>
+                            <p><span class="iconify" data-icon="vscode-icons:file-type-cpp" data-inline="false"></span>C++</p>
+                                <p><span class="iconify" data-icon="vscode-icons:file-type-powershell" data-inline="false"></span>PowerShell</p>
+                                    <p><span class="iconify" data-icon="mdi:bash" data-inline="false"></span>BASH</p>
+                    <p><span class="iconify" data-icon="skill-icons:git" data-inline="false"></span>Git</p>
+                    <p><span class="iconify" data-icon="devicon:matlab" data-inline="false"></span>Matlab</p> 
                 </div>
 
                 <div class="skill-type">
                     <h2 class="skill-type-title">Databases and Hardware</h2>
-                    <p><span class="iconify" data-icon="vscode-icons:file-type-mongo" data-inline="false"></span>        MongoDB</p>
-                        <p><span class="iconify" data-icon="vscode-icons:file-type-access" data-inline="false"></span>        Microsoft Access</p>
-                            <p><span class="iconify" data-icon="vscode-icons:file-type-sql" data-inline="false"></span>         SQL</p>
-                         <p><span class="iconify" data-icon="vscode-icons:file-type-systemverilog" data-inline="false"></span>        System Verilog</p>
+                    <p><span class="iconify" data-icon="vscode-icons:file-type-mongo" data-inline="false"></span>MongoDB</p>
+                        <p><span class="iconify" data-icon="vscode-icons:file-type-access" data-inline="false"></span>Microsoft Access</p>
+                            <p><span class="iconify" data-icon="vscode-icons:file-type-sql" data-inline="false"></span>SQL</p>
+                         <p><span class="iconify" data-icon="vscode-icons:file-type-systemverilog" data-inline="false"></span>System Verilog</p>
                          <p><span class="iconify" data-icon="vscode-icons:file-type-verilog" data-inline="false"></span>Verilog</p>
-                     <p><span class="iconify" data-icon="file-icons:assembly-arm" data-inline="false"></span>        ARM Assembly</p>
+                     <p><span class="iconify" data-icon="file-icons:assembly-arm" data-inline="false"></span>ARM Assembly</p>
                 </div>
             </div>
         </div>
@@ -132,6 +132,20 @@
     <section id="projects" class="projects">
         <h1 class="mainName section-title">Projects</h1>
         <div class="projectdiv">
+
+            <div class="individual-project-container">
+                <div class="project-text-content">
+                    <h2 class="individual-project-title">HurriScan</h2>
+                    <p class="projectdesc">A PyTorch-based deep learning model that implements a convolutional neural network which classifies satelite images of hurricanes into intensity classes on the Saffir-Simpson Hurricane Wind Scale for the purpose of forecasting.</p>
+                    <a class="project-link"  href="https://github.com/macaroonforu/HurriScan" class="github">Source Code</a>
+                    <p class="projectskill"><span class="iconify" data-icon="logos:python" data-inline="false"></span>Python</p>
+                    <p class="projectskill"><span class="iconify" data-icon="skill-icons:pytorch-light" data-inline="false"></span>PyTorch</p>
+                </div>
+                <div class="project-image-content">
+                    <img class="project-image" src="./projects/hurriscan.png">
+                </div>
+            </div>
+
             <div class="individual-project-container">
                 <div class="project-text-content">
                     <h2 class="individual-project-title">Digital Demodulation System</h2>
@@ -153,7 +167,19 @@
                 </div>
             </div>
 
-               <div class="individual-project-container">
+            <div class="individual-project-container">
+                <div class="project-text-content">
+                    <h2 class="individual-project-title">Common Song-Checker for Spotify Playlists</h2>
+                    <p class="projectdesc">A Python script that will compare songs in two Spotify playlists (by accessing the Spotify Web API) and present a list of those that appear in both.</p>
+                    <a class="project-link"  href="https://github.com/macaroonforu/Spotify-Duplicate-Playlist-Checker" class="github">Source Code</a>
+                    <p class="projectskill"><span class="iconify" data-icon="logos:python" data-inline="false"></span>Python</p>
+                </div>
+                <div class="project-image-content">
+                    <img class="project-image" src="./projects/spotify_duplicate_checker.png">
+                </div>
+            </div>
+
+            <div class="individual-project-container">
                 <div class="project-text-content">
                     <h2 class="individual-project-title">Weather Watcher</h2>
                     <p class="projectdesc">A weather application that allows one to search the name of a city or country, then fetches relevant data from an API and displays it on a web page.</p>
@@ -289,6 +315,7 @@
                     <img class="project-image" src="./projects/rps.png">
                 </div>
             </div>
+            
         </div>
     </section>
 
