--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="corkboard">
                 <div class="note sticky1">
                     <div class='pin'></div>
-                    <p style="font-size: 13px;">Third year computer engineering student at the University of Toronto.</p>
+                    <p style="font-size: 13px;">Third-year computer engineering student at the University of Toronto.</p>
                     <img src="./karen.webp" height="80px">
                 </div>
 
