--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-php" data-inline="false"></span>        PHP</p>
                 </div>
                 <div class="project-image-content">
-                    <img class="project-image" src="./projects/screenshot-output.png">
+                    <img class="project-image" src="./projects/amazon.png">
                 </div>
             </div>
 
