--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
             <div class="individual-project-container">
                 <div class="project-text-content">
-                    <h2 class="individual-project-title">Common Song-Checker for Spotify Playlists</h2>
+                    <h2 class="individual-project-title">Common Song Checker for Spotify Playlists</h2>
                     <p class="projectdesc">A Python script that will compare songs in two Spotify playlists (by accessing the Spotify Web API) and present a list of those that appear in both.</p>
                     <a class="project-link"  href="https://github.com/macaroonforu/Spotify-Duplicate-Playlist-Checker" class="github">Source Code</a>
                     <p class="projectskill"><span class="iconify" data-icon="logos:python" data-inline="false"></span>Python</p>
