changed rps image

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                     <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
                 </div>
                 <div class="project-image-content">
-                    <img class="project-image" src="./projects/rps2.png">
+                    <img class="project-image" src="./projects/rps.png">
                 </div>
             </div>
             
