--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                     <a class="project-link"  href="https://github.com/macaroonforu/HurriScan" class="github">Source Code</a>
                     <p class="projectskill"><span class="iconify" data-icon="logos:python" data-inline="false"></span>Python</p>
                     <p class="projectskill"><span class="iconify" data-icon="skill-icons:pytorch-light" data-inline="false"></span>PyTorch</p>
+                    <p class="projectskill"><span class="iconify" data-icon="devicon:matplotlib" data-inline="false"></span>Matplotlib</p>
                 </div>
                 <div class="project-image-content">
                     <img class="project-image" src="./projects/hurriscan.png">
